# triton-tenstorrent

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  TenstorrentSetup.md  triton.txt  triton_cpu.cc  triton_npu.cc
.github/patches/: RegisterTritonDialects.h.patch  gluon.test_core.py.patch
.github/workflows/: ci.yml  integration-tests-cpu.yml  integration-tests-macos.yml  integration-tests-tenstorrent.yml  pre-commit.yml  runner-preparation.yml  update-triton.yml
backend/: compiler.py  driver.py
cpu/include/Dialect/TritonCPU/IR/: CMakeLists.txt  Dialect.h  TritonCPUDialect.td  TritonCPUOps.td
cpu/include/Dialect/TritonCPU/Transforms/: Passes.h  Passes.td
cpu/include/TritonCPUToLLVM/: Passes.h  Passes.td
cpu/lib/: CMakeLists.txt
cpu/lib/Dialect/TritonCPU/IR/: CMakeLists.txt  Dialect.cpp  Ops.cpp
cpu/lib/Dialect/TritonCPU/Transforms/: CMakeLists.txt  Coalesce.cpp  MakePersistentKernel.cpp
cpu/lib/TritonCPUToLLVM/: Allocation.cpp  Allocation.h  CMakeLists.txt  CoreSpecialize.cpp  ElementwiseOpToLLVM.cpp  FuncOpToLLVM.cpp  GPUOpToLLVM.cpp  LoadStoreOpToLLVM.cpp  MaskedOpsToLLVM.cpp  PatternTritonGPUOpToLLVM.h  SharedMemoryGlobalConversion.cpp  TargetInfo.cpp  TargetInfo.h  TritonCPUToLLVM.cpp  Utility.cpp  Utility.h
examples/add_2_integers_in_compute/: CMakeLists.txt  add_2_integers_in_compute_multicore.cpp
examples/add_2_integers_in_compute/kernels/compute/: add_2_tiles.cpp  add_kernel_triton.cpp
examples/add_2_integers_in_compute/kernels/dataflow/: reader_triton.cpp  writer_triton.cpp
examples/matmul/: 03-matrix-multiplication.py  CMakeLists.txt  matmul_multi_core.cpp
examples/matmul/kernels/compute/: matmul_triton.cpp
examples/matmul/kernels/dataflow/: reader.cpp  writer.cpp
examples/matmul_common/: bmm_op.hpp
examples/matmul_fused/: CMakeLists.txt  matmul_fused_add.cpp
examples/matmul_fused/kernels/compute/: matmul_triton.cpp
examples/matmul_fused/kernels/dataflow/: reader.cpp  writer.cpp
examples/matmul_tensor_descriptor/: 09-persistent-matmul.py  09-persistent-matmul.ttnn.py  CMakeLists.txt  matmul_multi_core_tma.cpp  out
examples/matmul_tensor_descriptor/kernels/compute/: matmul_triton.cpp
examples/matmul_tensor_descriptor/kernels/dataflow/: reader.cpp  writer.cpp
npu/include/: CMakeLists.txt
npu/include/Analysis/: Utility.h
npu/include/Dialect/: CMakeLists.txt
npu/include/Dialect/TritonTenstorrent/IR/: Attributes.h  CMakeLists.txt  Dialect.h  TritonTenstorrentAttrDefs.td  TritonTenstorrentDialect.td  TritonTenstorrentOps.td
npu/include/Dialect/TritonTenstorrent/Transforms/: CMakeLists.txt  Passes.h  Passes.td  RegAlias.h  RegAlloc.h  Utility.h
npu/include/JIT/: CpuJIT.h
npu/include/TritonCPUToLLVM/: Passes.td
npu/include/TritonNPUToD2M/: CMakeLists.txt  Passes.h  Passes.td
npu/include/TritonNPUToLLVM/: Passes.h  Passes.td
npu/include/TritonNPUToTenstorrent/: CMakeLists.txt  Passes.h  Passes.td
npu/lib/: CMakeLists.txt
npu/lib/Analysis/: CMakeLists.txt  Utility.cpp
npu/lib/Dialect/TritonTenstorrent/IR/: CMakeLists.txt  Dialect.cpp  LinearLayoutConversions.cpp  Ops.cpp
npu/lib/Dialect/TritonTenstorrent/Transforms/: AccelerateMatmul.cpp  CMakeLists.txt  CanonicalizeMatmulLoops.cpp  ConvertComputeOps.cpp  ConvertTensorDescToLoadStore.cpp  CoreSpecialize.cpp  MaterializeMulticasts.cpp  PropagateRegisterIndices.cpp  PropagateTileEncoding.cpp  PtrRotate.cpp  RegAlias.cpp  RegAlloc.cpp  RemoveDotLoadLayoutConversions.cpp  RemoveRedundantMasks.cpp  TagInputOutputs.cpp  Utility.cpp
npu/lib/TritonCPUToLLVM/: CMakeLists.txt  CoreSpecialize.cpp  GPUOpToLLVM.cpp  TargetInfo.cpp
npu/lib/TritonNPUToLLVM/: Allocation.cpp  CMakeLists.txt  LoadStoreOpToLLVM.cpp  Utility.cpp  Utility.h
npu/lib/TritonNPUToTenstorrent/: CMakeLists.txt  ComputeOpToTTKernel.cpp  ControlFlowOpToFuncOp.cpp  ConvertMathToD2M.cpp  ConvertTritonFuncToFunc.cpp  ConvertTritonToLinalgGeneric.cpp  CreateTTNNGenericOp.cpp  DotOpToTTKernel.cpp  DropFunctionPass.cpp  ElementwiseOpToTenstorrent.cpp  ElementwiseOpsToTTKernel.cpp  FinalizeCBTransaction.cpp  FuncOpToMLIRFunc.cpp  IntrinsicOpToTTKernel.cpp  LoadStoreOpToTenstorrent.cpp  MakeRangeOpToTTKernel.cpp  MakeRangeOpToTenstorrent.cpp  MemoryOpToTTKernel.cpp  PatternTritonNPUOpToTenstorrent.h  PatternTritonNPUToTenstorrent.h  PointerInfoAnalysis.cpp  PointerInfoAnalysis.h  PrintOpToTTKernel.cpp  ReduceOpToTTKernel.cpp  SPMDOpToTTKernel.cpp  SPMDOpToTenstorrent.cpp  TritonFuncOpToFuncOp.cpp  TritonNPUToTTKernel.cpp  TritonNPUToTenstorrent.cpp  TypeConverter.cpp  TypeConverter.h  Utility.cpp  Utility.h  ViewOpToTTKernel.cpp  ViewOpToTenstorrent.cpp
npu/lib/TritonNPUToTenstorrent/D2M/: CMakeLists.txt  ComputeOpToD2M.cpp  DotOpToD2M.cpp  FuncOpToD2MGeneric.cpp  HoistCBAllocs.cpp  MemoryOpToD2M.cpp  PatternTritonNPUToD2M.h  ReduceOpToD2M.cpp  SPMDArgs.h  SPMDOpToD2M.cpp  TensorizeScalars.cpp  TritonNPUToD2M.cpp
python/tutorials/: 01-vector-add.loop.py  01-vector-add.py  01-vector-mul-add.py  09-matmul-fused.py
python/tutorials/gluon/: 01-intro.py
scripts/: build-llvm-with-bindings.sh  build-tt-mlir.sh
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Conversion/: func_to_d2m_generic.mlir  load_store.mlir  reduce_op_to_d2m.mlir  rewrite_tensor_descriptor.mlir  tensorize_scalars.mlir  triton_npu_to_d2m.mlir
test/Tenstorrent/: accelerate_matmul.mlir  binary_compute_op.mlir  canonicalize_matmul_loops.mlir  core_specialize.mlir  dot_op_to_ttkernel.mlir  finalize_cb_transaction.mlir  fused_matmul_binary_compute.mlir  materialize_multicasts.mlir  propagate_register_indices.mlir  propagate_tile_encoding.mlir  register_allocation.mlir  remove_dot_load_layout_conversion.mlir  remove_redundant_masks.mlir  tag_input_outputs.mlir  tag_input_outputs_invalid.mlir  triton_func_to_func.mlir  triton_npu_to_ttkernel.mlir
test/Transform/: make_persistent_kernel.mlir
unittest/: CMakeLists.txt  LinearLayoutConversionsTest.cpp
utils/: CMakeLists.txt  cpu_utils.cpp
